--- a/docs/deployment_guide/partner_editable/post_deployment.adoc
+++ b/docs/deployment_guide/partner_editable/post_deployment.adoc
@@ -2,16 +2,16 @@
 
 === Set AWS Lake Formation permissions
 
-Follow these steps to enable AWS Lake Formation to control your AWS Glue Data Catalog resources and to give your AWS Identity and Access Management (IAM) role permission to access the tables in the Data Catalog.  
+Follow these steps to enable AWS Lake Formation to control your AWS Glue Data Catalog resources and to give your AWS Identity and Access Management (IAM) role permission to access the tables in the Data Catalog.
 
 . Sign in to the AWS Management Console, and open the AWS Lake Formation console.
 
 . Enable Lake Formation to control your Data Catalog resources.
-.. In the navigation pane, under *Data catalog*, choose *Settings*. 
-.. Clear both check boxes and choose *Save*. 
+.. In the navigation pane, under *Data catalog*, choose *Settings*.
+.. Clear both check boxes and choose *Save*.
 
 . Give your IAM role permission to access the tables in the Data Catalog.
-.. In the navigation pane, under *Permissions*, choose *Data Lake Permissions*. 
+.. In the navigation pane, under *Permissions*, choose *Data Lake Permissions*.
 .. Choose *Grant* in the upper right, and do the following:
 * For *IAM users and roles*, enter your current IAM role.
 * For *LF-Tags or catalog resources*, choose *Named data catalog resources*.
@@ -28,13 +28,22 @@ When you're finished with the architecture deployed by this Quick Start, delete 
 . Look into `Makefile` and ensure that the following functions are passing the correct stack names:
 +
 //TODO Troy, How do we "look into" Makefile?
+* Change directory into the project root directory, and them cat MakeFile
++
+```
+$ cd quickstart-amazon-marketing-cloud
+$ cat MakeFile
+```
+
 * The `delete_repositories` function is passing `-d <AMC_QUICKSTART_REPO_NAME>` (default: `ddk-amc-quickstart`).
 +
 * The `delete_bootstrap` function is passing `--stack-name <BOOTSTRAP_STACK_NAME>` (default: `DdkDevBootstrap`).
 
-. Enter the following command: 
+. Enter the following command:
 +
-`$ make delete_all`
+```
+$ make delete_all
+```
 
 Some CloudWatch general log groups may remain in your account with logs specific to AMC Quick Start resources. Examples:
 
