--- a/docs/deployment_guide/partner_editable/_settings.adoc
+++ b/docs/deployment_guide/partner_editable/_settings.adoc
@@ -5,11 +5,9 @@
 :partner-company-name: the Amazon Ad Tech Solutions team
 :doc-month: May
 :doc-year: 2022
-:partner-contributors: Arpan Shah, Naomi Joshi, and Chaitra Nayak, Amazon Ad Tech Solutions team
-:other-contributors: Ramesh Jetty, Brian Maguire,Igor Londero Gentil - AWS Geo Solutions Architecture, Bret Pontillo, Noah Paige, Anmol Gandhi - AWS ProServe, Alex Burkleaux AWS M&E Solutions Architecture, Eric Beard - AWS Partner Core
-:aws-contributors: Chip Reno, AWS Advertising & Marketing Solutions team
-:aws-ia-contributors: Troy Ameigh, AWS Integration & Automation team
+:partner-contributors: Arpan Shah, Naomi Joshi, & Chaitra Nayak, Amazon Ad Tech Solutions
+//:other-contributors: 
+:aws-contributors: Ramesh Jetty, Brian Maguire, & Igor Londero Gentil, AWS Geo Solutions Architecture - Bret Pontillo, Noah Paige, & Anmol Gandhi, AWS ProServe - Alex Burkleaux, AWS Media & Entertainment Solutions Architecture - Eric Beard, AWS Partner Core - Chip Reno, AWS Advertising & Marketing Solutions
+:aws-ia-contributors: Troy Ameigh, AWS Integration & Automation
 :deployment_time: 1.5 hours
 :default_deployment_region: us-east-1
-
-//TODO Troy, Please fill in the team name for the "other-contributors" group.
