--- a/docs/deployment_guide/partner_editable/pre_deployment.adoc
+++ b/docs/deployment_guide/partner_editable/pre_deployment.adoc
@@ -1,10 +1,12 @@
-// Include any predeployment steps here, such as signing up for a Marketplace AMI or making any changes to a partner account. If there are no predeployment steps, leave this file empty.
-
 == Predeployment steps
+
+=== Confirm your AMC instance
+
+To confirm that you have an AMC instance provisioned and active, go to https://advertising.amazon.com/register?ref_=a20m_us_hnav_rgstr[Register for Amazon Ads^], and choose *switch to your advertising account*.
 
 === Set up your environment
 
-Before you deploy this Quick Start, you need to set up an environment that has programmatic access to your AWS account and that has various tools installed at the appropriate versions. You can set up your environment locally or in AWS Cloud9, as detailed in the following sections.
+You need to set up an environment with programmatic access to your AWS account and with various tools at appropriate versions. You can set up your environment locally or in AWS Cloud9, as detailed in the following sections.
 
 ==== Set up a local environment
 
@@ -26,7 +28,6 @@ $ aws --version
 ```
 $ cdk --version
 ```
-//TODO Troy, the landing page used to say, "Ensure that you have AWS CDK installed with the required environment variables." What are the "required environment variables," and how do we confirm that we have them?
 
 . Confirm that Git is installed and configured.
 +
@@ -53,7 +54,7 @@ $ git config --list
 
 . Open the AWS Cloud9 console, and create an EC2 environment in your chosen AWS Region. Choose instance type t3.small or larger, Amazon Linux 2. For details refer to https://docs.aws.amazon.com/cloud9/latest/user-guide/create-environment-main.html[Creating an EC2 Environment^].
 
-. In your integrated development environment (IDE), download the Quick Start from GitHub using this https://github.com/aws-quickstart/quickstart-amazon-marketing-cloud[Link], upload it to your AWS Cloud9 instance, and unzip it.
+. In your integrated development environment (IDE), download the https://github.com/aws-quickstart/quickstart-amazon-marketing-cloud[{partner-product-name} Quick Start repository^], upload it to your AWS Cloud9 instance, and unzip it.
 +
 By default, Python, pip, AWS CLI, AWS CDK, and Git are installed and configured for you in your AWS Cloud9 environment.
 
@@ -66,30 +67,31 @@ $ aws --version
 $ cdk --version
 $ git --version
 ```
-//TODO Troy, Where we say, "download the package" (above), which "package" are we referring to? And where do we download it from?
 
 . Verify the following versions:
 * Python 3.7 or later.
 * pip 9.0.3 or later.
 * AWS CDK version 2.10 or later.
 
-=== Install AWS DDK
-
-The https://github.com/awslabs/aws-ddk/blob/main/README.md[AWS DataOps Development Kit (DDK)^] is an open-source development framework for developers who build data workflows and modern data architecture on AWS. Follow these steps to install AWS DDK.
+=== Clone the Quick Start repo
 
 . Clone the https://github.com/aws-quickstart/quickstart-amazon-marketing-cloud[{partner-product-name} Quick Start repository^] as follows, replacing the information in brackets.
-+
+
 ```
 $ git clone <GITHUB-PATH>
 $ cd quickstart-amazon-marketing-cloud
 $ rm -rf .git
+
 ```
+
+=== Install and set up AWS DDK
 
 . Install AWS DDK.
 +
 ```
 $ pip install aws-ddk
 ```
+
 . Verify the installation.
 +
 ```
@@ -108,7 +110,7 @@ $ python -m venv .venv && source .venv/bin/activate
 $ pip install -r requirements.txt --no-cache-dir
 ```
 +
-The AWS DDK Core, a library of AWS CDK constructs, is installed.
+The https://pypi.org/project/aws-ddk-core/[AWS DDK Core^], a library of AWS CDK constructs, is installed.
 
 . If your AWS account hasn't been used to deploy AWS DDK apps before, bootstrap your environment as follows, replacing the information in brackets. .
 +
@@ -117,9 +119,9 @@ $ ddk bootstrap --help
 $ ddk bootstrap --profile <AWS_PROFILE> --trusted-accounts <AWS_ACCOUNT_ID>
 ```
 +
-You might recognize a number of files typically found in an AWS CDK Python application, such as `app.py` and `cdk.json. In addition, `ddk.json` holds configuration information about AWS DDK constructs.
+You might recognize a number of files typically found in an AWS CDK Python application, such as `app.py` and `cdk.json`. In addition, `ddk.json` holds configuration information about AWS DDK constructs.
 
-. Edit `ddk.json`, entering your account ID, the name of the CodeCommit repository to reference (you'll create this repository in a later step), and names of data-lake parameters such as `app`, `org`, `team`, `dataset`, and `pipeline`.
+. Edit the required parameters in `ddk.json`. Enter your account ID, the name of the AWS CodeCommit repository to reference (you'll create this repository in a later step), and names of data lake parameters such as `app`, `org`, `team`, `dataset`, and `pipeline`.
 +
 ```
 $ vi ddk.json
@@ -132,12 +134,11 @@ $ vi ddk.json
 $ git init --initial-branch main
 ```
 
-. Create a new CodeCommit repository as follows. Replace the information in brackets, using the repository name value from the `ddk.json` configuration file. The template is launched in the {default_deployment_region} Region by default.
+. Create a new CodeCommit repository as follows. Replace the information in brackets, using the repository name value from the `ddk.json` configuration file. The template is launched in the {default_deployment_region} Region by default; change this Region if necessary in the following command.
 +
 ```
 $ ddk create-repository <AMC_QUICKSTART_REPO_NAME> --profile <AWS_PROFILE> --region <AWS_REGION>
 ```
-//TODO Troy, per our standard language, I added "The template is launched in the {default_deployment_region} Region by default" above. Is that accurate here? NO this is CDK so there are no templates that the end uer will see.
 
 . Add and push the initial commit to the repository as follows, replacing the information in brackets.
 +
@@ -150,12 +151,7 @@ $ git commit -m "Configure AMC QUICKSTART"
 $ git push --set-upstream origin main
 ```
 
-
 == Deployment steps
-
-Use AWS CDK to deploy this Quick Start. AWS CDK provides familiar programming tools and syntax to define infrastructure as code and to provision it through AWS CloudFormation. For more information, refer to https://docs.aws.amazon.com/cdk/v2/guide/work-with.html[Working with the AWS CDK^]. For more information on AWS DataOps Development Kit (DDK) core please refer to https://pypi.org/project/aws-ddk-core/[AWS DDK Core]
-
-//TODO Troy, I added our standard CDK lead-in paragraph (above). Do we need more context since step 1 is "ddk deploy" instead of "cdk deploy"?
 
 Deploying this Quick Start takes about {deployment_time} to complete.
 
