--- a/docs/operational_guide/partner_editable/_settings.adoc
+++ b/docs/operational_guide/partner_editable/_settings.adoc
@@ -8,10 +8,11 @@
 :doc-month: May
 :doc-year: 2022
 // Uncomment the following "contributor" attributes as appropriate. If the partner agrees to include names, enter contributor names for every line we use. If partner doesn't want to include names, delete all placeholder names and keep only "{partner-company-name}" and "AWS Integration & Automation team."
-:partner-contributors: Arpan Shah, Naomi Joshi, and Chaitra Nayak, Ad Tech Solutions
-:aws-contributors: Chip Reno, AWS WW AD & Mktg Sols GTMS
-:aws-ia-contributors: Troy Ameigh, AWS Integration & Automation team
-:other-contributors: Ramesh Jetty, Brian Maguire,Igor Londero Gentil - AWS Geo Solutions Architecture, Bret Pontillo, Noah Paige, Anmol Gandhi - AWS ProServe, Alex Burkleaux AWS M&E Solutions Architecture, Eric Beard - AWS Partner Core
+:partner-contributors: Arpan Shah, Ronak Parikh, & Chaitra Nayak, Amazon Ad Tech Solutions
+//:other-contributors:
+:aws-contributors: Ramesh Jetty, Brian Maguire, & Gerry Louw, AWS Geo Solutions Architecture - Bret Pontillo, Noah Paige, Naomi Joshi & Anmol Gandhi, AWS ProServe - Eric Beard, AWS Partner Core - Chip Reno, AWS Advertising & Marketing Solutions
+:aws-ia-contributors: Troy Ameigh, AWS Integration & Automation
+ok
 
 
 // For deployment_time, use minutes if deployment takes an hour or less,
