--- a/docs/deployment_guide/partner_editable/_settings.adoc
+++ b/docs/deployment_guide/partner_editable/_settings.adoc
@@ -3,11 +3,11 @@
 :partner-product-name: Amazon Marketing Cloud Insights
 :partner-product-short-name: AMC Insights
 :partner-company-name: the Amazon Ad Tech Solutions team
-:doc-month: May
+:doc-month: June
 :doc-year: 2022
-:partner-contributors: Arpan Shah, Ronak Parikh, & Chaitra Nayak, Amazon Ad Tech Solutions
+:partner-contributors: Arpan Shah, Ronak Parikh, and Chaitra Nayak, Amazon Ad Tech Solutions
 //:other-contributors:
-:aws-contributors: Ramesh Jetty, Brian Maguire, & Gerry Louw, AWS Geo Solutions Architecture - Bret Pontillo, Noah Paige, Naomi Joshi & Anmol Gandhi, AWS ProServe - Eric Beard, AWS Partner Core - Chip Reno, AWS Advertising & Marketing Solutions
+:aws-contributors: Ramesh Jetty, Brian Maguire, and Gerry Louw, AWS Solutions Architecture | Bret Pontillo, Noah Paige, Naomi Joshi and Anmol Gandhi, AWS Professional Services | Eric Beard, AWS Partner Core | Chip Reno and Clark Fredricksen, AWS Advertising & Marketing Industry
 :aws-ia-contributors: Troy Ameigh, AWS Integration & Automation
 :deployment_time: 1.5 hours
 :default_deployment_region: us-east-1
